--- a/index.html
+++ b/index.html
@@ -9,90 +9,81 @@
 <body>
     <header></header>
     <main>
-        <!-- Quinto ejemplo -->
         <h2>Formulario</h2>
-
-        <form action="">
+        <form action="archivo que controla o procesa el formulario">
             <fieldset>
-                <legend>Datos Generales</legend>
-
+                <legend>Datos generales</legend>
                 <div>
-                    <label for="">Nombre</label>
-                    <input type="text" name="Nombre" id="Nombre">
-                </div>
-
-                </div>  
-                    <label for="edad">Edad</label>
-                    <input type="number" name="edad" id="edad">
+                    <label for="b">nombre</label>
+                    <input type="text" name="b" id="b" />
                 </div>
 
                 <div>
-                    <label for="cf">Color de fondo</label>
-                    <input type="color" name="cf" id="cf">
+                    <label for="c">edad</label>
+                    <input type="number" name="c" id="c" />
                 </div>
-
                 <div>
-                    <label for="Clave">Password</label>
-                    <input type="password" name="Clave" id="Clave">
+                    <label for="cf">edad</label>
+                    <input type="color" name="cf" id="cf" />
                 </div>
-
                 <div>
-                    <label for="info">Comentarios:</label>
+                    <label for="password">contraseña</label>
+                    <input type="color" name="cv" id="cv" />
+                </div>
+                <div>
+                    <label for="info">comentarios</label>
                     <textarea name="info" id="info" cols="30" rows="10"></textarea>
                 </div>
-
                 <div>
-                    <label for="metodo_pago">Metodo de pago: </label>
-                    <select name="metodo_pago" id="metodo_pago">
-                        <option value="12">Efectivo</option>
-                        <option value="5">Debito</option>
-                        <option value="4">Credito</option>
-                        <option value="1">Bitcoin</option>
+                    <label for="metodo_pago_fav">metodo de pago</label>
+                    <select name="metodo_pago_fav" id="metodo_pago_fav" multiple>
+                        <option value="12">efectivo</option>
+                        <option value="5">credito</option>
+                        <option value="4">debito</option>
+                        <option value="1">bitcoin</option>
                     </select>
                 </div>
-
                 <div>
-                    <label for="metodo_pago_favorito">Metodo de pago favorito: </label>
-                    <select name="metodo_pago_favorito" id="metodo_pago_favorito" multiple>
-                        <option value="12">Efectivo</option>
-                        <option value="5">Debito</option>
-                        <option value="4">Credito</option>
-                        <option value="1">Bitcoin</option>
-                    </select>
-                </div>
-
-                <div>
-                    <label for="vehiculo">Vehiculo</label>
-                    <select name="vehiculo" id="vehiculo">
-                        <optgroup label="Camionetas">
-                        <option value="3">Toyota</option>
-                        <option value="43">Silveradp</option>
+                    <label for="Vehiculos" >Vehiculos</label>
+                    <select name="Vehiculos" id="Vehiculos">
+                        <optgroup label="camionetas">
+                            <option value="3">Toyota</option>
+                            <option value="6">Siverado</option>
                         </optgroup>
-
-                        <optgroup label="Autos compactos">
-                        <option value="3">Versa</option>
-                        <option value="2">Sentra</option>
+                        <optgroup label="autos_compactos">
+                            <option value="2">Versa</option>
+                            <option value="7">Sentra</option>
                         </optgroup>
                     </select>
                 </div>
-
                 <div>
-                    <label for="edo_civil">¿Casado?</label>
+                    <label for="edo_civil">¿casado?</label>
                     <input type="checkbox" name="edo_civil" id="edo_civil">
-
                 </div>
-
                 <div>
-                    <label for="foto">Archivo en foto</label>
+                    <label for="foto">Archivo foto empleado:</label>
                     <input type="file" name="foto" id="foto">
                 </div>
                 <input type="submit" value="Enviar">
-            
+                <div>
+                    <label for="metodo_pago_fav">metodo de pago</label>
+                    <select name="metodo_pago_fav" id="metodo_pago_fav">
+                        <option value="12">efectivo</option>
+                        <option value="5">credito</option>
+                        <option value="4">debito</option>
+                        <option value="1">bitcoin</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="a">nombre
+                        <!-- La entrada esta asociada a la etiqueta -->
+                        <input type="text" name="a" id="a" />
+                    </label>
+                </div>
             </fieldset>
         </form>
 
-        <!-- Primer ejemplo -->
-        <H1>Tablas Html</H1>
+        <h2>Tablas html</h2>
         <table border="1px">
             <tr>
                 <td>Actividad</td>
@@ -105,18 +96,17 @@
                 <td>Domingo</td>
             </tr>
             <tr>
-                <td>X</td>
-                <td>X</td>
-                <td>X</td>
-                <td>X</td>
-                <td>X</td>
-                <td>X</td>
-                <td>X</td>
-                <td>X</td>
+                <td>Ir al gimnasio</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
             </tr>
         </table>
-        <!-- Segundo ejemplo -->
-<br>
+        <br />
         <table border="1px">
             <tr>
                 <th>Actividad</th>
@@ -129,19 +119,17 @@
                 <th>Domingo</th>
             </tr>
             <tr>
-                <th>X</th>
-                <th>X</th>
-                <th>X</th>
-                <th>X</th>
-                <th>X</th>
-                <th>X</th>
-                <th>X</th>
-                <th>X</th>
+                <td>Ir al gimnasio</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
             </tr>
         </table>
-        </table>
-        <!-- Tercer ejemplo -->
-<br>
+        <br />
         <table border="1px">
             <tr>
                 <th>Actividad</th>
@@ -154,29 +142,27 @@
                 <th>Domingo</th>
             </tr>
             <tr>
-               <td>Ir al gimansio</td>
-               <td colspan="5">X</td>
-               <td>-</td>
-               <td>-</td>
+                <td>Ir al gimnasio</td>
+                <td colspan="5">x</td>
+                <td>-</td>
+                <td>-</td>
             </tr>
             <tr>
                 <td>Salir con mi novia</td>
                 <td colspan="5">-</td>
-                <td colspan="2">X</td>
+                <td colspan="2">x</td>
             </tr>
             <tr>
-                <td>Practica Futbol</td>
-                <td rowspan="2">X</td>
+                <td>Practicar futbol</td>
+                <td rowspan="2">x</td>
                 <td colspan="6">-</td>
             </tr>
-
             <tr>
-                <td>Practica basquet</td>
+                <td>Practirar basket</td>
                 <td colspan="7">-</td>
             </tr>
         </table>
-        <!-- Cuarto ejemplo -->
-<br>
+        <br />
         <table border="1px">
             <thead>
                 <tr>
@@ -193,31 +179,95 @@
                     <th>Domingo</th>
                 </tr>
             </thead>
-            </tbody>
-            <tr>
-               <td>Ir al gimansio</td>
-               <td colspan="5">X</td>
-               <td>-</td>
-               <td>-</td>
-            </tr>
-            <tr>
-                <td>Salir con mi novia</td>
-                <td colspan="5">-</td>
-                <td colspan="2">X</td>
-            </tr>
-            <tr>
-                <td>Practica Futbol</td>
-                <td rowspan="2">X</td>
-                <td colspan="6">-</td>
-            </tr>
+            <tbody>
                 <tr>
-                    <td>Practica basquet</td>
+                    <td>Ir al gimnasio</td>
+                    <td colspan="5">x</td>
+                    <td>-</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>Salir con mi novia</td>
+                    <td colspan="5">-</td>
+                    <td colspan="2">x</td>
+                </tr>
+                <tr>
+                    <td>Practicar futbol</td>
+                    <td rowspan="2">x</td>
+                    <td colspan="6">-</td>
+                </tr>
+                <tr>
+                    <td>Practirar basket</td>
                     <td colspan="7">-</td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="8">Elaborado por: abc</td>
+                    <td colspan="8">Elaborado por JVPC</td>
+                </tr>
+            </tfoot>
+        </table>
+        <br />
+        <table border="1px">
+            <tr>
+                <th>Actividad</th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miercoles</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+                <th>Sabado</th>
+                <th>Domingo</th>
+            </tr>
+            <tr>
+                <td>Ir al gimnasio</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+                <td>x</td>
+            </tr>
+        </table>
+        <br />
+        <table border="1px">
+            <!--sirve para seleccionar la columna de una tabla-->
+            <colgroup>
+                <!--los col son posicionales cada col de arriba a abajo equivale a cada columna de izq a derecha-->
+                <col />
+                <!--El atributo span sirve para que una columna agrupe mas de una columna -->
+                <!--esto solo se ve coloreando los col con css-->
+                <col span="2" />
+                <col />
+            </colgroup>
+            <thead>
+                <caption>
+                    Horario clases
+                </caption>
+                <tr>
+                    <th></th>
+                    <th>L</th>
+                    <th>M</th>
+                    <th>X</th>
+                    <th>J</th>
+                    <th>V</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>8:30-9:30</td>
+                    <td>mate</td>
+                    <td>mate</td>
+                    <td>mate</td>
+                    <td>mate</td>
+                    <td>mate</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>Total de asignaturas</td>
+                    <td>5</td>
                 </tr>
             </tfoot>
         </table>
